# whois

./: CLAUDE.md  Cargo.toml  PROTOCOL.md  README.md  llm.txt
.github/workflows/: release.yml
src/: cli.rs  colorize.rs  hyperlink.rs  lib.rs  main.rs  markdown.rs  protocol.rs  query.rs  servers.rs
