[package]
name = "whois"
version = "0.2.0"
edition = "2021"
description = "A simple WHOIS query tool"
authors = ["Pysio"]
license = "AGPL-3.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
regex = "1.11.1"
urlencoding = "2.1.3"

[profile.release]
lto = true
opt-level = "z"
strip = true
