[package]
name = "whois"
version = "0.3.2"
edition = "2021"
description = "A simple WHOIS query tool"
authors = ["Pysio"]
license = "AGPL-3.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
regex = "1.11.1"
urlencoding = "2.1.3"
# Markdown rendering
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "11.0"
# Terminal image display
viuer = { version = "0.7", optional = true }
# Base64 encoding for embedded images
base64 = "0.21"

[features]
default = ["images"]
images = ["viuer"]

[profile.release]
lto = true
opt-level = "z"
strip = true
